# workers

./: .aiignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  REFERENCE.md  go.work
etl/: .dockerignore  CLAUDE.md  Containerfile  README.md  config.py  configmap-etl-schema.yaml  conftest.py  envelope.py  health.py  pyproject.toml  schema.py  schema_registry.py  test_health.py  test_payload_routing.py  test_schema_registry.py  test_transform.py  transform.py  worker.py
etl/deploy/base/: configmap-env.yaml  configmap-etl-schema.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  secret.yaml  secrets.yaml  serviceaccount.yaml
etl/docs/: developer-guide.md  schema-reference.md  troubleshooting.md
etl/docs/engineering-journals/: 2026-03-12-etl-worker-bootstrap.md  2026-03-17-etl-documentation-suite.md
etl/schemas/: google-sheets-v1.yaml
notification/email/: Containerfile  MESSAGE_FORMAT.md  __init__.py  __main__.py  config.py  conftest.py  mailer.py  pyproject.toml  templates.py  worker.py
notification/email/deploy/: README.md  kustomization.yaml
notification/email/scripts/: README.md  publish-email-message.py  test-local.sh
notification/email/templates/: cluster-expiring.txt  cluster-provisioned.txt  lab_deprovisioned.txt  lab_ready.txt
notification/email/testing/: README.md  check-operators.sh  cleanup-test.sh  deploy-test.sh  mailhog-deployment.yaml  port-forward.sh  rabbitmq-cluster.yaml  rabbitmq-deployment.yaml  rabbitmq-deployment.yaml.example  test-publish.sh
notification/email/tests/: test_templates.py
(+59 files in other folders)
