[project]
name = "worker-etl"
version = "0.1.0"
description = "ETL worker for OpenShift Partner Labs — validates and transforms intake payloads"
requires-python = ">=3.12"
dependencies = [
    "pika>=1.3.2",          # RabbitMQ client
    "pydantic>=2.7.0",      # Validation and type coercion
    "pyyaml>=6.0",          # Parse ConfigMap schema
    "pydantic-settings>=2.3.0",  # Env-based config
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[dependency-groups]
dev = [
    "worker-etl[dev]",
]

[tool.uv.sources]
worker-etl = { workspace = true }
