[project]
name = "worker-notification"
version = "0.1.0"
description = "Notification worker for OpenShift Partner Labs — sends email notifications via SMTP"
requires-python = ">=3.12"
dependencies = [
    "pika>=1.3.2",          # RabbitMQ client
    "pydantic>=2.7.0",      # Validation
    "pydantic-settings>=2.3.0",  # Env-based config
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[dependency-groups]
dev = [
    "worker-notification[dev]",
]

[tool.uv.sources]
worker-notification = { workspace = true }
